--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "iostream": "cpp",
         "algorithm": "cpp",
         "string": "cpp",
-        "initializer_list": "cpp"
+        "initializer_list": "cpp",
+        "xstring": "cpp"
     }
 }
